<resources>
    <string name="app_name">Archive</string>
    <string name="input_category">카테고리를 입력해주세요</string>
    <string name="text_all">전체</string>
    <string name="search_category_result_none">찾으신 보관함은\n아직 등록되지 않았어요.</string>
    <string name="category_add_btn_format" formatted="false">+ \'%s\' 추가</string>
    <string name="current_exist_category">현재 있는 카테고리</string>
    <string name="category_delete_btn_format" formatted="false">%d 카테고리 삭제</string>
    <string name="ask_where_to_post_confirm_format">%d곳에 기록할까요?</string>

    <string name="text_category_search">카테고리 검색</string>
    <string name="text_category_delete">카테고리 삭제</string>
    <string name="text_category_name_edit">카테고리명 수정</string>
    <string name="text_category_delete_article">게시물 삭제</string>
    <string name="text_no_category">카테고리가 없습니다.</string>
    <string name="text_tutorial_2_title_1">저장하고 싶은</string>
    <string name="text_tutorial_2_title_2">사진, 링크</string>
    <string name="text_tutorial_2_title_3">를</string>
    <string name="text_step_1">step 1</string>
    <string name="text_step_2">step 2</string>
    <string name="text_tutorial_3_press">눌러</string>
    <string name="text_tutorial_3_share_to_posted">포스티드에 공유</string>
    <string name="text_tutorial_3_share_end">하면 끝!</string>
    <string name="text_skip" translatable="false">skip</string>
    <string name="text_next">다음</string>
    <string name="text_tutorial_start">바로 시작하기</string>
    <string name="text_article_delete">게시물 삭제</string>
    <string name="text_no_article">게시물이 없습니다.</string>
    <string name="text_category_to_search_or_add">찾고 싶거나 추가하고 싶은 보관함</string>
    <string name="text_cancel">취소</string>
    <string name="category_delete_title">이 카테고리만 지우시겠습니까,\n이 카테고리에 포함된 게시물까지 모두 지우시겠습니까?</string>
    <string name="double_tap_to_exit">다시 한 번 누르면 종료됩니다.</string>
    <string name="text_setting">설정</string>
    <string name="text_sort_options">정렬 순서</string>
    <string name="ask_where_to_post">어디에 기록할까요?</string>
    <string name="input_article_message_hint">함께 기록하고 싶은 내용</string>
</resources>