<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/text_category_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_category_delete"
        android:title="@string/text_category_delete"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_category_edit"
        android:title="@string/text_category_name_edit"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_category_delete_article"
        android:title="@string/text_category_delete_article"
        app:showAsAction="collapseActionView" />
</menu>