<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey400"
    tools:context=".ui.view.tutorial.TutorialActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bg_tutorial_tile" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pic_tutorial_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tutorial_1_gradient"
        android:paddingBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_step"
            style="@style/UG.Light.18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_step_1"
            android:textColor="@color/grey100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/title_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_step">

            <TextView
                style="@style/UG.Bold.26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tutorial_2_title_1"
                android:textColor="@color/white" />

            <TextView
                style="@style/UG.Bold.26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_tutorial_2_title_2"
                android:textColor="@color/green200" />

            <TextView
                style="@style/UG.Bold.26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tutorial_2_title_3"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>