<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.samderra.archive.ui.view.tutorial.TutorialViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkgrey400"
        android:orientation="vertical"
        tools:context=".ui.view.tutorial.TutorialActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_tutorial"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_skip"
                style="@style/Pretendard.Light.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:text="@string/text_skip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_next"
                style="@style/Pretendard.Light.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:text="@string/text_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                style="@style/Pretendard.Bold.20"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:background="@color/blue200"
                android:text="@string/text_tutorial_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>